grammar.js
    source_file: $ => repeat($._top_level_statement),

    _top_level_statement: $ => choice(
      $._statement,
      $.hotstring,
      $.remap,
      $.hotkey,
    ),

    _statement: $ => choice(
      // Directives are allowed anywhere but executed unconditionally
      $._directive,
      $.directive_comment,
      $.function_declaration,
      $.class_declaration,
      $.struct_declaration,
      $.export_declaration,
      // Declarations are statements, not expressions - `static x := 1` may not appear as an
      // operand. See variable_declaration.
      seq($.variable_declaration, $._eol),
      // call_statements only at statement level.
      prec.dynamic(-1, $.call_statement),
      // Trailing `_eol` prevents expression statements from running into the next line.
      seq($._statement_expression, $._eol),
      seq(alias($.top_level_expression_sequence, $.expression_sequence), $._eol),
      // blocks are allowed at the top level, though they don't do anything. The negative
      // dynamic precedence makes a bare block lose to a function_expression when a brace
      // follows an expression on the same line (`cb := worker() { ... }` is a function
      // expression assignment, not an assignment followed by a free-floating block).
      prec.dynamic(-10, $.block),
      $.label,
      $._control_flow_statement,
      $._loop_flow_statement,
    ),

    line_comment: $ => prec(PREC.COMMENT, choice(token(';'), token(/;[^@\r\n][^\r\n]*/))),

    directive_comment: $ => prec(PREC.COMMENT, seq(
      token(';@'),
      field('directive', alias(/[^\r\n\s]*/i, $.directive_identifier)),
      optional(field('arguments', alias(/[^\r\n]*/, $.directive_arguments))),
      $._eol,
    )),

    //# region General Expressions

    _single_expression: $ => choice(
      $._pairwise_operation,
      $._literal,
      $.identifier,
      $.dynamic_identifier,
      $._primary_expression,
      $.verbal_not_operation,
      $.dereference_operation,
      $.varref_operation,
      // The maybe operator (?) is a postfix marker on an operand. It is permitted
      // in expression position generally so that optional chains (x?.y) and
      // alpha.29 short-circuiting (f()? as an operand of any operator) compose
      // naturally. Where it is actually legal is contextual; we are permissive.
      $.optional_expression,
    ),

    expression_sequence: $ => prec(PREC.COMMA, seq(
      $._single_expression,
      repeat(seq(',', $._single_expression)),
    )),

    // A `local`/`global`/`static` declaration list: `static a := 1, b := 2, c`. Every name in
    // the list takes the declared scope, so each gets its own declarator rather than the list
    // decaying into an expression_sequence in which only the first name is marked.
    //
    // The list may be empty: a bare `global` or `static` as a function's first line selects
    // assume-global / assume-static mode. A bare `local` is *not* legal ("Unexpected
    // declaration"), nor is either keyword anywhere but the first line - both contextual, so
    // both are permitted here.
    //
    // FIXME some declarations are contextually illegal - you can't delcare local variables in the auto-execute
    // section, for example. We may not be able to detect those with pure grammar rules
    variable_declaration: $ => prec.right(seq(
      field('scope', $.scope_identifier),
      optional(seq(
        $.variable_declarator,
        repeat(seq(',', $.variable_declarator)),
      )),
    )),

    // Not restricted to `:=`: `global w += 1` is legal and means "declare w global, then
    // apply +=" (verified against 2.0.26), so any assignment operator may follow the name.
    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(seq(
        field('operator', $.assignment_operator),
        field('value', $._single_expression),
      )),
    ),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._single_expression),
      '?',
      field('true_branch', $._single_expression),
      ':',
      field('false_branch', $._single_expression),
    )),

    //# endregion

    //# region Operators
    assignment_operation: $ => prec.left(PREC.ASSIGNMENT, seq(
      field('left', $._single_expression),
      field('operator', $.assignment_operator),
      field('right', $._single_expression),
    )),

    implicit_concat_operation: $ => prec.left(PREC.CONCAT, seq(
      field('left', $._single_expression),
      $._implicit_concat_marker,
      field('right', $._single_expression),
    )),

    // Postfix increment/decrement
    prefix_operation: $ => prec.right(PREC.PREFIX, seq(
      field('operator', choice(
        '++', '--',     // prefix increment/decrement
        '!', '~',       // logical NOT, bitwise NOT
        '+', '-',        // unary plus, unary minus
      )),
      field('operand', $._single_expression),
    )),

    // Verbal NOT operator (lower precedence than !)
    multiplicative_operation: $ => prec.left(PREC.MULTIPLICATIVE, seq(
      field('left', $._single_expression),
      field('operator', choice('*', '/', '//')),
      field('right', $._single_expression),
    )),

    relational_operation: $ => prec.left(PREC.RELATIONAL, seq(
      field('left', $._single_expression),
      field('operator', choice('<', '>', '<=', '>=')),
      field('right', $._single_expression),
    )),

    and: $ => kwtok(/and/i),
    or: $ => kwtok(/or/i),
    concat_operator: $ => token(/\.\s+/),

    logical_and_operation: $ => prec.left(PREC.LOGICAL_AND, seq(
      field('left', $._single_expression),
      field('operator', choice('&&', $.and)),
      field('right', $._single_expression),
    )),

    logical_or_operation: $ => prec.left(PREC.LOGICAL_OR, seq(
      field('left', $._single_expression),
      field('operator', choice('||', $.or)),
      field('right', $._single_expression),
    )),

    bitwise_and_operation: $ => prec.left(PREC.BITWISE_AND, seq(
      field('left', $._single_expression),
      field('operator', '&'),
      field('right', $._single_expression),
    )),

    bitwise_or_operation: $ => prec.left(PREC.BITWISE_OR, seq(
      field('left', $._single_expression),
      field('operator', '|'),
      field('right', $._single_expression),
    )),

    bitshift_operation: $ => prec.left(PREC.SHIFT, seq(
      field('left', $._single_expression),
      field('operator', $.bitshift_operator),
      field('right', $._single_expression),
    )),

    explicit_concat_operation: $ => prec.left(PREC.CONCAT, seq(
      field('left', $._single_expression),
      field('operator', $.concat_operator),
      field('right', $._single_expression),
    )),

    member_access: $ => prec(PREC.MEMBER_ACCESS, seq(
      field('object', $._single_expression),
      '.',
      field('member', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
        $.dereference_operation,
        alias($._member_dynamic_identifier, $.dynamic_identifier),
      )),
    )),

    // A combination of identifiers and derefs, such as `a%b%`
    // Derefs can follow other derefs, like obj.%a%%b%
    // All parts must be contiguous (no whitespace) — `a %b%` is implicit concatenation, not a dynamic identifier
    // Adapted from: https://github.com/Descolada/keysharp/blob/master/Keysharp.Core/Scripting/Parser/Antlr/MainParser.g4#L480
    _member_dynamic_identifier: $ => prec.dynamic(1, prec.right(PREC.MEMBER_ACCESS, choice(
      seq(
        // Unlike variable names, property names may also *start* with a digit (`obj.2a%k%`)
        choice($.identifier, alias($._numeric_property_name, $.identifier)),
        $.dereference_operation,
        repeat(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation)),
      ),
      seq(
        $.dereference_operation,
        repeat1(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation,
        )),
      ),
    ))),

    // The "maybe" operator: a postfix `?` permitting its operand to be unset.
    // Syntactically it just wraps the immediately-preceding operand; the
    // short-circuit semantics are a runtime concern and are not modelled here.
    // The operand is restricted to the things that can legally precede `?`:
    // a variable, a property/member access, an index access, or a call.
    optional_expression: $ => prec.right(PREC.MAYBE, seq(
      field('operand', choice(
        $.identifier,
        $.member_access,
        $.index_access,
        $.function_call,
        // A parenthesized sub-expression may also be made optional: `(a ?? b)?.c`
        $.parenthesized_expression,
      )),
      $.optional_marker,
    )),

    parenthesized_expression: $ => seq('(', $.expression_sequence, ')'),

    assignment_operator: $ =>
      choice( ':=', '+=', '-=', '*=', '/=', '//=', '.=', '|=', '&=', '^=', '>>=', '<<=', '>>>=', '??='),

    bitshift_operator: $ => choice('<<', '>>', '>>>'),

    index_access: $ => prec(PREC.OVERRIDE, seq(
      field('object', $._single_expression),
      token.immediate('['),
      field('arguments', optional($.arg_sequence)),
      ']',
    )),

    // MsgBox("Hello", "Example", "IconI OK")
    // Can be used in expressions
    function_call: $ => prec(PREC.OVERRIDE, seq(
      field('function', $._single_expression),
      token.immediate('('),
      field('arguments', optional($.arg_sequence)),
      ')',
    )),

    // MsgBox "Hello", "Example", "IconI OK"
    // Can only be used as a statement (not in expressions)
    call_statement: $ => prec.right(PREC.OVERRIDE, seq(
      // Only simple identifiers and object members for command-style.
      // `true`/`false` are built-in variables (lexed as boolean_literal), so a bare
      // `false` on a line is a command-style call of that variable - the interpreter
      // parses it as `false()` (a runtime error, but syntactically valid). Bare numeric
      // and string literals, by contrast, are load-time errors ("does not contain a
      // recognized action") and are correctly rejected.
      field('function', choice(
        $.identifier,
        $.member_access,
        $.boolean_literal,
      )),
      field('arguments', optional($.arg_sequence)),
      $._eol,
    )),

    _arg: $ => choice(
      $._single_expression,
      $.empty_arg,
    ),

    arg_sequence: $ => prec.right(choice(
      // Args without expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        /**
         * A trailing comma is allowed but ignored - you can test this
         *    Function(params*) => MsgBox(params.length)
         *    Function(1,) ; "1"
         */
        optional(','),
      ),
      // Only the *last* argument may be expanded, hence the separate alternatives rather
      // than admitting array_expansion_operation as an ordinary `_arg`. They share the
      // `_arg (',' _arg)*` prefix with the branch above so that LALR can defer the decision
      // to the marker itself.
      // Single arg with expansion
      $.array_expansion_operation,
      // Multiple args with last one having expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        ',',
        $.array_expansion_operation,
      ),
    )),

    // Postfix `*`, which expands an iterable into the enclosing argument list or array
    // literal. array_expansion_marker is produced by the external scanner, which
    // disambiguates it from the multiplication operator by looking ahead for ')' or ']'.
    method_declaration: $ => seq(
      $._method_def_marker,
      optional(field('scope', $.scope_identifier)),
      field('name', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
      )),
      field('head', $.function_head),
      field('body', $.function_body),
    ),

    function_body: $ => choice(
      $.block,
      seq('=>', $._single_expression),
    ),

    function_head: $ => seq(
      '(',
      optional(choice($.wildcard, $.param_sequence)),
      ')',
    ),

    // "formal parameter list"
    param_sequence: $ => choice(
      // Just a variadic parameter: (params*)
      $.variadic_param,
      // One or more regular params, optionally followed by a variadic or wildcard: (a, b, rest*)
      seq(
        choice($._param, $.byref_param),
        repeat(seq(',', choice($._param, $.byref_param))),
        optional(choice(
          seq(',', $.variadic_param),
          seq(',', $.wildcard),
        )),
      ),
    ),

    _param: $ => choice(
      $.identifier,
      $.optional_param,
      $.default_param,
    ),

    // A parameter may be marked optional with the maybe operator (name?). Unlike a
    // general optional_expression, a parameter name is only ever a bare identifier.
    // Shares PREC.MAYBE with optional_expression so the reduce/reduce on `(a?)`
    // is a genuine conflict resolved by GLR (see conflicts), not by precedence.
    integer_literal: $ => token(/([0-9]+)/),

    hex_literal: $ => token(/0[xX][0-9a-fA-F]+/),


    string_literal: $ => choice(
      token(/"([^"`\r\n]|`[^\r\n\t])*"/),
      token(/'([^'`\r\n]|`[^\r\n\t])*'/),
    ),

    // The elements are an arg_sequence rather than an expression_sequence: an array literal
    // takes exactly what an argument list takes, including elided elements (`[1,,3]`) and a
    // trailing array expansion (`[a, rest*]`), neither of which is an expression.
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // AHK allows property and method names, but not variable names, to begin with a digit
    // https://www.autohotkey.com/docs/alpha/Concepts.htm#names
    _numeric_property_name: $ => token(/[0-9][a-zA-Z0-9_]*/),

    // Note: not strictly "modifiers" because declaring one can switch a function into assume-local/global mode
    scope_identifier: $ => token(
      prec(PREC.KEYWORD, choice(
        /static/i,
        /local/i,
        /global/i,
      ))),

    //# region Continuation Sections

    continuation_section: $ => seq(
      $._continuation_section_start,
      _continuation_interior($, $.continuation_line_sequence, $.continuation_line,
        /[^\r\n)][^\r\n]*/, /[^\r\n;)][^\r\n;]*/),
      token(prec.left(1, ')')),
    ),

    continuation_join: $ => token(prec(PREC.KEYWORD, /join[^\r\n\s]{0,15}/i)),

    continuation_ltrim: $ => token(prec(PREC.KEYWORD, /LTrim/i)),
    continuation_ltrim_off: $ => token(prec(PREC.KEYWORD, /LTrim0/i)),
    continuation_rtrim_off: $ => token(prec(PREC.KEYWORD, /RTrim0/i)),
    continuation_allow_comments: $ => token(prec(PREC.KEYWORD, /Comments|Comment|Com|C/i)),
    continuation_no_escape: $ => token(prec(PREC.KEYWORD, '`')),

    //# endregion

    //# region Control Flow

    // higher precedence than object_literal
    // Separate recursive rule for block bodies (prevents LALR state merging with
    // _switch_clause_body, keeping 'case'/'default' out of block lexer states)
    _block_body: $ => seq($._statement, optional($._block_body)),

    block: $ => seq(
      '{', optional($._block_body), '}',
    ),

    if_statement: $ => prec.right(PREC.DEFAULT, seq(
      $.if,
      field('condition', $._single_expression),
      field('body', choice(
        seq($._eol, $._statement), // bare statement requires newline
        $.block,
      )),
      field('else_block', repeat($.else_statement)),
    )),

    return_statement: $ => prec.right(PREC.DEFAULT,
      seq(
        $.return,
        optional(seq($._value_start, field('value', $._single_expression))),
      ),
    ),

    if: $ => kwtok(/if/i),
    while: $ => kwtok(/while/i),
    return: $ => kwtok(/return/i),
    class_declaration: $ => seq(
      $._class_decl_marker,
      $.class,
      field('name', $.identifier),
      optional(seq(
        $.extends,
        field('superclass', choice($.identifier, $.member_access)),
      )),
      field('body', $.class_body),
    ),
