test/corpus/assignments.txt
================================================================================
Simple assignment
================================================================================

x := 42

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Global variable declaration with assignment
================================================================================

global oNE := 1

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (scope_identifier)
    (variable_declarator
      (identifier)
      (assignment_operator)
      (integer_literal))))

================================================================================
Global variable declaration followed by assignment
================================================================================

global var
var := 42

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (scope_identifier)
    (variable_declarator
      (identifier)))
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
String literal assignment
================================================================================

str := "un 'quote' d"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (string_literal)))

================================================================================
Assignment with unset
================================================================================

x := unset

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (unset)))

================================================================================
Addition assignment
================================================================================

x += 5

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Subtraction assignment
================================================================================

x -= 5

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Multiplication assignment
================================================================================

x *= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Division assignment
================================================================================

x /= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Floor division assignment
================================================================================

x //= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Concatenation assignment
================================================================================

str .= " more"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (string_literal)))

================================================================================
Bitwise OR assignment
================================================================================

x |= 8

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Bitwise AND assignment
================================================================================

x &= 8

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Bitwise XOR assignment
================================================================================

x ^= 8

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Right shift assignment
================================================================================

x >>= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Left shift assignment
================================================================================

x <<= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Unsigned right shift assignment
================================================================================

x >>>= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Unset coalescing assignment
================================================================================

x ??= 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal)))

================================================================================
Local variable declaration
================================================================================

local myVar

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (scope_identifier)
    (variable_declarator
      (identifier))))

================================================================================
Static variable declaration with assignment
================================================================================

static counter := 0

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (scope_identifier)
    (variable_declarator
      (identifier)
      (assignment_operator)
      (integer_literal))))

================================================================================
Simple assignment with optional variable
================================================================================

x := (var?)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (parenthesized_expression
      (expression_sequence
        (optional_expression
          (identifier)
          (optional_marker))))))
