test/corpus/continuation-operators.txt
================================================================================
If condition continued by leading && operator
================================================================================

if a
    && b
    MsgBox()

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if)
    (logical_and_operation
      (identifier)
      (identifier))
    (function_call
      (identifier))))

================================================================================
If condition continued by leading && operator with block body
================================================================================

if a
    && b {
    MsgBox()
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if)
    (logical_and_operation
      (identifier)
      (identifier))
    (block
      (function_call
        (identifier)))))

================================================================================
If condition continued by leading || operator
================================================================================

if a
    || b
    MsgBox()

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if)
    (logical_or_operation
      (identifier)
      (identifier))
    (function_call
      (identifier))))

================================================================================
If condition continued by leading word operator
================================================================================

if a
    and b
    or c
    MsgBox()

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if)
    (logical_or_operation
      (logical_and_operation
        (identifier)
        (and)
        (identifier))
      (or)
      (identifier))
    (function_call
      (identifier))))

================================================================================
Assignment continued by leading member access
================================================================================

x := obj
    .foo()
    .bar()

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (function_call
      (member_access
        (function_call
          (member_access
            (identifier)
            (identifier)))
        (identifier)))))

================================================================================
While condition continued by leading operator
================================================================================

while a
    && b
    MsgBox()

--------------------------------------------------------------------------------

(source_file
  (while_statement
    (while)
    (logical_and_operation
      (identifier)
      (identifier))
    (function_call
      (identifier))))

================================================================================
Leading operator continuation does not merge a following hotkey
================================================================================

x := 1
::btw::by the way

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal))
  (hotstring
    (hotstring_trigger)
    (hotstring_replacement)))

================================================================================
Call statement with implicit concat continued by leading dot concatenation
================================================================================

ToolTip "Sender: " sender.Dump()
    . "kind: " kind " (" Map.Kinds[kind] ")"

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (arg_sequence
      (implicit_concat_operation
        (implicit_concat_operation
          (implicit_concat_operation
            (implicit_concat_operation
              (explicit_concat_operation
                (implicit_concat_operation
                  (string_literal)
                  (function_call
                    (member_access
                      (identifier)
                      (identifier))))
                (concat_operator)
                (string_literal))
              (identifier))
            (string_literal))
          (index_access
            (member_access
              (identifier)
              (identifier))
            (arg_sequence
              (identifier))))
        (string_literal)))))

================================================================================
Expression statement continued by a leading arithmetic operator
================================================================================

x := 1
    * 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (multiplicative_operation
      (integer_literal)
      (integer_literal))))

================================================================================
Expression statement continued by a leading division operator
================================================================================

x := 8
    / 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (multiplicative_operation
      (integer_literal)
      (integer_literal))))

================================================================================
Expression statement continued by a leading comparison operator
================================================================================

x := 3
    < 2

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (relational_operation
      (integer_literal)
      (integer_literal))))

================================================================================
Expression statement continued by leading ternary branches
================================================================================

x := 1
    ? 7
    : 8

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (ternary_expression
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Leading ++ starts a new statement rather than continuing
================================================================================

x := 1
++x

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal))
  (prefix_operation
    (identifier)))

================================================================================
Leading -- starts a new statement rather than continuing
================================================================================

x := 3
--x

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal))
  (prefix_operation
    (identifier)))

================================================================================
Continuation operator after a trailing line comment
================================================================================

x := "a"  ; note
    . "b"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (explicit_concat_operation
      (string_literal)
      (line_comment)
      (concat_operator)
      (string_literal))))

================================================================================
Method named And does not continue the previous line
================================================================================

class P {
    ;@region Members

    And(Other) {
        return Other
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (class)
    (identifier)
    (class_body
      (directive_comment
        (directive_identifier)
        (directive_arguments))
      (method_declaration
        (identifier)
        (function_head
          (param_sequence
            (identifier)))
        (function_body
          (block
            (return_statement
              (return)
              (identifier))))))))

================================================================================
Expression statement continued by a leading bitwise-or operator
================================================================================

x := i
    | 4

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (bitwise_or_operation
      (identifier)
      (integer_literal))))

================================================================================
Expression statement continued by a leading bitwise-and operator
================================================================================

x := 7
    & 3

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (bitwise_and_operation
      (integer_literal)
      (integer_literal))))

================================================================================
Bitshift chain continued by leading bitwise-or operators
================================================================================

i := (a & 0x1f) << 24
    | b << 16
    | c << 8
    | d

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (bitwise_or_operation
      (bitwise_or_operation
        (bitwise_or_operation
          (bitshift_operation
            (parenthesized_expression
              (expression_sequence
                (bitwise_and_operation
                  (identifier)
                  (hex_literal))))
            (bitshift_operator)
            (integer_literal))
          (bitshift_operation
            (identifier)
            (bitshift_operator)
            (integer_literal)))
        (bitshift_operation
          (identifier)
          (bitshift_operator)
          (integer_literal)))
      (identifier))))

================================================================================
Leading bitwise-or continuation does not merge a following hotkey
================================================================================

x := 1
|::MsgBox "pipe"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal))
  (hotkey
    (hotkey_trigger
      (key_identifier))
    (call_statement
      (identifier)
      (arg_sequence
        (string_literal)))))
