test/corpus/continuation-sections.txt
================================================================================
Empty continuation section
================================================================================

test :=
(

)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section)))

================================================================================
Continuation section with join
================================================================================

Var :=
( Join`s
MsgBox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_join))
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Continuation section with LTrim
================================================================================

Var :=
( LTrim
MsgBox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_ltrim))
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Continuation section with LTrim0
================================================================================

Var :=
( LTrim0
    MsgBox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_ltrim_off))
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Continuation section with RTrim0
================================================================================

Var :=
( RTrim0
    MsgBox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_rtrim_off))
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Continuation section with comments
================================================================================

Var :=
( Comment
    MsgBox "Hello, World!" ; I'm a comment
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_allow_comments))
      (continuation_line_sequence
        (continuation_line)
        (line_comment)))))

================================================================================
Continuation section with backtick
================================================================================

Var :=
( `
    MsgBox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_no_escape))
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Continuation section with mixed options
================================================================================

Var :=
( Comment ` RTrim0 LTrim
    MsgBox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_allow_comments)
        (continuation_no_escape)
        (continuation_rtrim_off)
        (continuation_ltrim))
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Unterminated continuation section at end of file
:error
================================================================================

test :=
(

--------------------------------------------------------------------------------



================================================================================
Unterminated continuation section with a body at end of file
:error
================================================================================

test :=
(
MsgBox "Hello, World!"

--------------------------------------------------------------------------------



================================================================================
Bare unterminated continuation section at end of file
:error
================================================================================

test
(

--------------------------------------------------------------------------------



================================================================================
Continuation section body is not parsed as AutoHotkey
================================================================================

Var :=
(
} ] this is not valid AHK { (
1 + + + 2
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_line_sequence
        (continuation_line)
        (continuation_line)))))

================================================================================
Continuation section with an escaped closing parenthesis
================================================================================

Var :=
(
`) is a literal paren, not a terminator
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_line_sequence
        (continuation_line)))))

================================================================================
Continuation section with code after the closing parenthesis
================================================================================

Var :=
(
some text
) . "suffix"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (explicit_concat_operation
      (continuation_section
        (continuation_line_sequence
          (continuation_line)))
      (concat_operator)
      (string_literal))))

================================================================================
Continuation section with a join character splitting a call
================================================================================

Var :=
( JoinB
Msg
ox "Hello, World!"
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_option_sequence
        (continuation_join))
      (continuation_line_sequence
        (continuation_line)
        (continuation_line)))))

================================================================================
Continuation section with a literal semicolon and no comment option
================================================================================

Var :=
(
this ; is literal text
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (continuation_section
      (continuation_line_sequence
        (continuation_line)))))
